# project-zebra

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 346507133018_make_full_name_required.py  9a051248860d_create_users_table.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/schemas/: auth.py
backend/tests/: conftest.py  test_auth.py  test_security.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Home.jsx  Login.jsx  ProtectedRoute.jsx  Register.css  Register.jsx
frontend/src/utils/: api.js
