[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zebra-backend"
version = "0.1.0"
description = "Authentication system with JWT and passkeys"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "sqlalchemy==2.0.28",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "passlib[argon2]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "pydantic[email]==2.6.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "httpx==0.27.0",
]
dev = [
    "ruff==0.3.0",  # Linter + formatter (replaces black, flake8, isort)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are okay
